welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: value est is not a member of object plm.universe.Direction
			if (getDirection == Direction.est) gauche
                                                      ^